fix: bug-40221  select text in web, then press scrollbar, select will hide...
Description: react-custom-scrollbars控件按下时会设置上层标签user-select:none,导致其选中状态丢失.强制设置artical样式user-select:text来处理此问题.

Log: 【帮助手册】【5.6.25】内容全选时点击滚动条，全选状态消失

link:

--- a/src/web_dist/index.css
+++ b/src/web_dist/index.css
@@ -46,7 +46,8 @@ div {
 #article {
   width: calc(100% - 164px);
   margin: 10px 0px 10px 0px;
-  border-radius: 8px; }
+  border-radius: 8px;
+  user-select: text !important; }
   #article #article_bg {
     margin: 0px 10px 0px 10px;
     background-color: var(--nav-background-color);
